--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     background-image: url(https://getwallpapers.com/wallpaper/full/7/d/c/1172966-free-download-developer-wallpaper-hd-2560x1440-cell-phone.jpg);
-   background-size: cover;
+   
 }
 
 .box-0 {
@@ -113,10 +113,9 @@ footer {
     color: white;
     text-align: center;
     margin-top: 30px;
+    height: 20px;
 }
-.footer-1 {
-   margin-bottom: 5px;
-}
+
 .p-1 {
     color: white;
     margin-bottom: 15px;
