--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@
 }
 
 body {
-    background-image: url(https://getwallpapers.com/wallpaper/full/7/d/c/1172966-free-download-developer-wallpaper-hd-2560x1440-cell-phone.jpg);
-   
+    background-image: url(./img/garoto-com-oculos-vr-experimentando-o-metaverso.jpg);
+    background-size:cover;
+  
 }
 
 .box-0 {
@@ -159,10 +160,10 @@ footer {
     }
 
     section {
-      position: absolute;top: 0;left: 0;
-      margin-left:80px;  
+      position: absolute;top: 0;left: 35%;
+      margin: auto;
       width: auto;
-    
+      
     }
 
     h2 {
@@ -175,6 +176,11 @@ footer {
         margin-left: 50px;
         width: auto;
         font-size: 20px;
+    }
+    body {
+    
+     background-position-x: center;
+     
     }
 
 
