--- a/style.css
+++ b/style.css
@@ -6,12 +6,16 @@
 
 body {
     background-image: url(./img/garoto-com-oculos-vr-experimentando-o-metaverso.jpg);
-    background-size:cover;
-  
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment:fixed;
 }
 
 .box-0 {
-    height: 86vh;
+    height: 100vh;
     width: 100vw;
     display: inline-flex;
 }
@@ -20,8 +24,6 @@ body {
     width: 50%;
     display: inline-block;
     text-align: center;
-  
-
 }
 
 .box-2 {
@@ -36,10 +38,10 @@ p {
     font-size: 18px;
     font-weight: 380;
     color: rgba(232, 232, 224, 0.725);
-    background-color: rgba(241, 236, 252, 0.064);
+    background-color: rgba(21, 39, 59, 0.511);
     border-radius: 20px;
     box-shadow: 0 4px 8px rgb(146, 142, 142);
-    margin-top: 35px;
+    margin-top: 25px;
 }
 
 h1 {
@@ -50,22 +52,22 @@ h1 {
     font-size: 40px;
     font-weight: 400;
     color: rgba(251, 253, 255, 0.851);
-    background-color: rgba(250, 249, 253, 0.178);
+    background-color: rgba(21, 39, 59, 0.511);
     border-radius: 20px;
     box-shadow: 0 4px 8px rgb(146, 142, 142);
     width: auto;
-
 }
 
-section {
-    margin-left: 810px;
-    margin-right: 50px;
-    margin-top: 20px;
-
-
+.contact {
+    display: flex;
+    width: auto;
+    justify-content: center;
+    margin: 5px;
+    height: 28px;
+  
 }
 
-a {
+.a {
     margin-right: 10px;
     margin-left: 5px;
     text-decoration: none;
@@ -73,9 +75,8 @@ a {
     border-radius: 10px;
     color: rgb(176, 165, 165);
     font-weight: 450px;
-    cursor:pointer;
-    
-
+    height: 35px;
+    display: inline-block;
 }
 
 h2 {
@@ -87,7 +88,7 @@ h2 {
     font-weight: 350;
     margin-left: 190px;
     color: rgba(239, 227, 227, 0.782);
-    background-color: rgba(239, 235, 247, 0.232);
+    background-color: rgba(21, 39, 59, 0.511);
     border-radius: 20px;
     box-shadow: 0 4px 8px rgb(146, 142, 142);
 }
@@ -98,23 +99,38 @@ ul {
 }
 
 li {
-    display: flex;
+    list-style: none;
     align-items: center;
-    margin-left: 350px;
+    margin-left: 50px;
     font-size: 30px;
+    height: 40px;
+    
 }
-.img-1{
+
+.img-1 {
     margin-right: 25px;
+    display: inline-block;
+ 
 }
+
 .text-1 {
     font-size: 50px;
     margin: 100px;
 }
+
 footer {
     color: white;
     text-align: center;
-    margin-top: 30px;
-    height: 20px;
+   
+    
+}
+
+.footer-1 {
+    text-decoration: none;
+    box-shadow: 1px 4px 2px rgb(221, 215, 215);
+    border-radius: 10px;
+    color: rgb(176, 165, 165);
+    margin-bottom:10px ;
 }
 
 .p-1 {
@@ -122,70 +138,91 @@ footer {
     margin-bottom: 15px;
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1000px) {
     .box-1 {
         display: block;
         text-align: center;
         width: auto;
     }
-    
+
     .box-2 {
         width: auto;
         display: block;
     }
 
     .box-0 {
-       
+
         display: inline;
+        width: auto;
     }
 
     p {
         width: auto;
         font-weight: 380;
-        margin: 20px;
+        margin: 10px;
     }
 
     h1 {
         font-size: 30px;
         font-weight: 400;
-        margin:20px ;
+        margin: 20px;
         width: auto;
-    
+    }
+
+    footer {
+       
+        display: flex;
+        justify-content: center;
+        margin-top:80px;
     }
 
     .text-1 {
         width: auto;
-        margin: 60px 0px 0px;
-        font-size: 40px;
-    }
-
-    section {
-      position: absolute;top: 0;left: 35%;
-      margin: auto;
-      width: auto;
-      
+        margin: 30px 0px 0px;
+        font-size: 30px;
     }
 
     h2 {
         margin: 20px;
         width: auto;
+        font-size: 30px;
+    }
+    .p-1 {
+        display: none;
     }
 
-     li {
+    li {
         margin: 0;
-        margin-left: 50px;
         width: auto;
-        font-size: 20px;
+        font-size: 18px;
     }
-    body {
+    span {
+        display: none;
     
-     background-position-x: center;
-     
+    }
+    .span-1 {
+        display: none;
+    }
+    .span-2 {
+        display: none;
+    }
+    .span-3 {
+        display: none;
+    }
+    .span-4 {
+        display: none;
+    }
+    .span-5 {
+        display: none;
     }
 
 
-    
-    
-    
-    
+
+
+
+
+
+
+
+
 }
