--- a/tooltip.css
+++ b/tooltip.css
@@ -1,4 +1,4 @@
-.tooltip {
+/* .tooltip {
     position: relative;
     display: inline-block;
     cursor: pointer;
@@ -140,4 +140,4 @@ span {
 .tooltip:hover span {
     visibility: visible;
     opacity: 1;
-}
+} */
