--- a/swiper.css
+++ b/swiper.css
@@ -1,21 +1,43 @@
 
 
 .swiper-container {
-    width: 400px;
+    width: 600px;
     margin-top: 100px;
     margin-left: 350px;
     padding: 50px;;
   }
 
   .swiper-slide {
-      
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
   }
 
-  .swiper-slide img {
-    display: block;
+  .swiper-slide .img-1 {
+   
     width: 100%;
-    margin-left: 53px;
-    margin-top: 40px;
+   
+    
     border-radius: 25px;
   }
-  
+  @media screen and (max-width: 1000px) {
+    .swiper-container {
+      width: auto;
+      margin: 4px;
+      margin-top: 10px;
+    }
+    .swiper-container {
+        padding: 45px;
+        width: auto;
+        
+      display:block;
+      
+    }
+    .swiper-slide .img-1 {
+      width: 100%;
+    }
+   
+    
+
+  }
